pfSense-palenight.css
/* ... */
/* active table row on hover */
.table-hover > tbody > tr.active:hover > td,
.table-hover > tbody > tr.active:hover > th,
.table-hover > tbody > tr:hover > .active,
.table-hover > tbody > tr > td.active:hover,
.table-hover > tbody > tr > th.active:hover {
  background-color: #bdbdbd;
}

/* Handle the limited space available on the Status DHCPv6 Leases table.
  * Break DUID string when needed and use smaller text.
  */
.statusdhcpv6leases tbody > tr > td:nth-of-type(4) {
  word-wrap: break-word;
  word-break: break-all;
  font-size: smaller;
}

/* Smaller text for IAID in leases table and in prefixes table
  * for the route ip and its IAID.
  */
.statusdhcpv6leases tbody > tr > td:nth-of-type(3),
.statusdhcpv6prefixes tbody > tr > td:nth-of-type(3) {
  font-size: smaller;
}

/* Break DUID string in the prefixes table. */
.statusdhcpv6prefixes tbody > tr > td:nth-of-type(5) {
  word-wrap: break-word;
  word-break: break-all;
}

.popover {
  max-width: none;
}

.help-block {
  margin-bottom: 0;
  color: var(--text);
}

.text-muted {
  color: var(--text);
}

.action-buttons {
  text-align: right;
  margin-top: 10px;
  margin-bottom: 20px;
}

/** Form validation */
.input-errors ul {
  margin-top: 20px;
}

/** Page header with title and breadcrumb */
.header {
  position: relative;
  margin: 10px 0 20px 0;
  margin-bottom: 10px;
  background-color: var(--contrast);
}

.header .context-links {
  position: absolute;
  right: 15px;
  top: 15px;
}

.header .context-links li {
  float: left;
  display: inline;
  margin-left: 10px;
}

.breadcrumb {
  background-color: transparent;
  font-size: 22px;
}

.breadcrumb > li + li:before {
  padding: 0;
  padding-left: 5px;
  color: var(--text);
}

/** Form tweaks */
form .btn + .btn {
  margin-left: 5px;
}

.input-group-inbetween {
  border-left: 0;
}

.user-duplication .controls {
  margin-top: 10px;
}

.checkbox.multi label {
  display: block;
}

.checkbox.multi .btn {
  margin-top: 5px;
}

.col-sm-10 .form-control {
  width: calc(50% - 15px);
}

@media (max-width: 991px) {
  .col-sm-10 .form-control {
    width: 100%;
  }
}

/** Page footer */
.footer {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 40px;
  background-color: var(--contrast);
  padding-top: 10px;
  text-align: center;
}

footer a {
  color: var(--foreground);
}

/** Homepage / dashboard */
[id^='widgets-col'] {
  min-height: 300px;
}

.widget .panel-heading {
  background-color: #757575;
}

#widgetSequence {
  position: fixed;
  left: 0;
  bottom: 0;
  padding: 20px 0;
  width: 100%;
  z-index: 100;
  text-align: center;
  background: rgba(255, 255, 255, 0.6);
  border-top: 1px solid var(--border);
}

/** Styling for jQuery autocomplete widget */
.ui-autocomplete {
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1000;
  float: left;
  display: none;
  min-width: 160px;
  padding: 4px 0;
  margin: 0 0 10px 25px;
  list-style: none;
  background-color: #ffffff;
  border-color: #ccc;
  border-color: rgba(0, 0, 0, 0.2);
  border-style: solid;
  border-width: 1px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  -webkit-background-clip: padding-box;
  -moz-background-clip: padding;
  background-clip: padding-box;
  *border-right-width: 2px;
  *border-bottom-width: 2px;
}

/** Disable the autocomplete helper text */
.ui-helper-hidden-accessible {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

/** Override the bootstrap progress bar margins and background colors */
.progress {
  margin-bottom: 0px;
  height: 14px;
  background-color: var(--contrast);
}

#wizard .progress {
  margin-bottom: 10px;
}

.progress-bar {
  background-color: var(--purple);
}

.progress-bar.progress-bar-success {
  background-color: var(--green);
}

.progress-bar.progress-bar-warning {
  background-color: var(--yellow);
}

.progress-bar.progress-bar-danger {
  background-color: var(--red);
}

.panel-body.collapse.in {
  overflow-x: auto;
}

/** start common colors */
.alert-warning {
  color: var(--dark-yellow);
  background-color: var(--light-yellow);
  border-color: var(--yellow);
  border-top: 5px solid var(--yellow);
}

.alert-success {
  color: var(--dark-green);
  background-color: var(--light-green);
  border-color: var(--dark-green);
  border-top: 5px solid var(--dark-green);
}

.alert-info {
  color: var(--dark-blue);
  background-color: var(--light-blue);
  border-color: var(--dark-blue);
  border-top: 5px solid var(--dark-blue);
}

.alert-danger {
  color: var(--dark-red);
  background-color: var(--light-red);
  border-color: var(--dark-red);
  border-top: 5px solid var(--dark-red);
}

.bg-primary {
  color: #000;
  background-color: #009688;
}

.bg-info {
  color: var(--dark-blue);
  background-color: var(--light-blue);
}

.bg-danger {
  color: #000;
  background-color: #ef9a9a;
}

.bg-warning {
  color: #000;
  background-color: #fff9c4;
}

.bg-success {
  color: #1b5e20;
  background-color: #c8e6c9;
}

.btn-success {
  background-color: #60ba59;
}

.btn-danger {
  background-color: var(--red);
}

.btn-primary {
  background-color: var(--dark-blue);
}

.text-warning {
  color: var(--dark-yellow);
}

.text-success {
  color: var(--green);
}

.text-danger {
  color: var(--red);
}
/** end common colors */

.table-hover > tbody > tr.hover-success:hover {
  color: #000;
  background-color: #a5d6a7;
}

.table-hover > tbody > tr.hover-danger:hover {
  color: #000;
  background-color: #ef9a9a;
}

.table-hover > tbody > tr.hover-warning:hover {
  color: #000;
  background-color: #fff9c4;
}

/** icons are often used with onclick actions, so we need the cursor to change to a pointer */
.icon-pointer {
  cursor: pointer;
}
/* ... */

